--- a/terraform/resources/frontend/index.html
+++ b/terraform/resources/frontend/index.html
@@ -6,6 +6,19 @@
 <body>
     <h1>Hola Redes!</h1>
     <button id="changeColorButton">Change Background Color</button>
+    
+    <h2>Create User</h2>
+    <form id="userForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Create User</button>
+    </form>
+    
+    <h2>Users</h2>
+    <button id="getUsersButton">Get All Users</button>
+    <ul id="userList"></ul>
 
     <script src="script.js"></script>
 </body>
